Tests de todas las clases concluidos.

--- a/PatronRepositorio/PatronRepositorio.csproj
+++ b/PatronRepositorio/PatronRepositorio.csproj
@@ -57,14 +57,25 @@
     <Compile Include="BLL\RepositorioBase.cs" />
     <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Entidades\Cargo.cs" />
+    <Compile Include="Entidades\Categoria.cs" />
     <Compile Include="Entidades\Compra.cs" />
     <Compile Include="Entidades\DetalleCompra.cs" />
+    <Compile Include="Entidades\DetalleVenta.cs" />
     <Compile Include="Entidades\Empleado.cs" />
+    <Compile Include="Entidades\Estado.cs" />
+    <Compile Include="Entidades\Imagen.cs" />
+    <Compile Include="Entidades\Marca.cs" />
+    <Compile Include="Entidades\Modelo.cs" />
     <Compile Include="Entidades\Permiso.cs" />
     <Compile Include="Entidades\Personas.cs" />
+    <Compile Include="Entidades\Producto.cs" />
     <Compile Include="Entidades\Proveedor.cs" />
+    <Compile Include="Entidades\TipoComprobante.cs" />
+    <Compile Include="Entidades\TipoPersona.cs" />
+    <Compile Include="Entidades\UnidadMedida.cs" />
     <Compile Include="Entidades\Usuario.cs" />
     <Compile Include="Entidades\Usuario_Has_Permiso.cs" />
+    <Compile Include="Entidades\Venta.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
