--- a/PatronRepositorioTests/PatronRepositorioTests.csproj
+++ b/PatronRepositorioTests/PatronRepositorioTests.csproj
@@ -63,9 +63,26 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Entidades\CargoTests.cs" />
+    <Compile Include="Entidades\CategoriaTests.cs" />
+    <Compile Include="Entidades\CompraTests.cs" />
+    <Compile Include="Entidades\DetalleCompraTests.cs" />
+    <Compile Include="Entidades\DetalleVentaTests.cs" />
+    <Compile Include="Entidades\EmpleadoTests.cs" />
+    <Compile Include="Entidades\EstadoTests.cs" />
+    <Compile Include="Entidades\ImagenTests.cs" />
+    <Compile Include="Entidades\MarcaTests.cs" />
+    <Compile Include="Entidades\ModeloTests.cs" />
+    <Compile Include="Entidades\PermisoTests.cs" />
     <Compile Include="Entidades\PersonasTests.cs" />
+    <Compile Include="Entidades\ProductoTests.cs" />
     <Compile Include="Entidades\ProveedorTests.cs" />
+    <Compile Include="Entidades\TipoComprobanteTests.cs" />
+    <Compile Include="Entidades\TipoPersonaTests.cs" />
+    <Compile Include="Entidades\UnidadMedidaTests.cs" />
     <Compile Include="Entidades\UsuarioTests.cs" />
+    <Compile Include="Entidades\Usuario_Has_PermisoTests.cs" />
+    <Compile Include="Entidades\VentaTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
