--- a/PatronRepositorioTests/PatronRepositorioTests.csproj
+++ b/PatronRepositorioTests/PatronRepositorioTests.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Entidades\CargoTests.cs" />
     <Compile Include="Entidades\CategoriaTests.cs" />
+    <Compile Include="Entidades\ClienteTests.cs" />
     <Compile Include="Entidades\CompraTests.cs" />
     <Compile Include="Entidades\DetalleCompraTests.cs" />
     <Compile Include="Entidades\DetalleVentaTests.cs" />
